--- a/style.css
+++ b/style.css
@@ -4,117 +4,84 @@
 }
 
 .menu{
-    background: #3498db;
+    background-color: red;
 }
 .menu ul{
     text-align: center;
-    
 }
 .menu ul li{
     display: inline-block;
-    border-left: 1px solid #ddd;
-    margin-right: -4px;
-    
+    border-left: 1px solid black;
 }
 .menu ul li:last-child a{
-    border-right: 1px solid #ddd;
+    border-right: 1px solid black;
 }
 .menu ul li a{
-    color: aliceblue;
+    color: black;
     text-decoration: none;
+    padding: 15px 25px;
     display: inline-block;
-    padding: 15px 20px;
-    font-size: 15px;
+
+    margin-right: -4px;
+    transition: 0.4s;
+}
+.menu ul li a:hover{
+    background-color: darkgoldenrod;
 }
 
-.menu ul li:hover > a{
-    background: #2980b9;
-}
 
 
-
-/* DropDown Menu Start */
-
-
+/* dropdown menu start */
 
 .menu ul li{
     position: relative;
 }
-
-
 .menu ul li ul{
     position: absolute;
     top: 100%;
     left: 0;
-    width: 200px;
-    background: #3498db;
-    border-top: 1px solid #ddd;
-
-    transition: .4s;
+    width: 150px;
+    background-color: black;
 }
-
-
 .menu ul li ul li{
     display: block;
-    margin-right: 0;
+    margin: 0;
+    border: none;
 }
-
-
 .menu ul li ul li a{
     border: none;
     display: block;
-    border-bottom: 1px solid #ddd;
+    color: antiquewhite;
+    margin-right: 0;
+    border-bottom: 1px solid white;
+    
+    
 }
 
-.menu ul ul li:last-child a{
-    border-right: none;
+.menu ul li ul li:first-child a{
+    border-top: 1px solid white;
 }
 
 
-/* hover -Part */
+.menu ul li:last-child a{
+    border: none;
+}
 
 
 .menu ul li ul{
-    visibility: hidden;
     opacity: 0;
-    transform: scaleY(0);
-    transform-origin: top center;
+    visibility: hidden;
+    transform: scaleX(0);
+    transform-origin: left center;
+    transition: 0.4s;
 }
 
 .menu ul li:hover ul{
-    visibility: visible;
     opacity: 1;
-    transform: scaleY(1);
-    
+    visibility: visible;
+    transform: scaleX(1);
 }
 .menu ul li ul li a:hover{}
 
 
 
-
-
-/* Social menu */
-
-
-
-.social-menu{
-    margin-top: 350px;
-}
-.social-menu ul{
-    text-align: center;
-}
-.social-menu ul li{
-    display: inline-block;
-}
-.social-menu ul li a{
-    color: #fff;
-    background-color: #8e44ad;
-    margin-left: 5px;
-    margin-right: 10px;
-    height: 100px;
-    width: 100px;
-    display: inline-block;
-    line-height: 100px;
-    font-size: 50px;
-    border-radius: 50%;
-}
